--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="@dimen/as_margin">
@@ -43,7 +43,6 @@
             android:id="@+id/btn_clear"
             style="@style/ButtonStyleTransparent"
             android:text="@string/btn_clear" />
-
     </FrameLayout>
     <TextView
         android:id="@+id/recent_tracks_title"
@@ -59,11 +58,22 @@
         android:textSize="@dimen/as_text_size"
         android:visibility="gone" />
 
+
+    <FrameLayout android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/twenty_four"/>
+
+    <ProgressBar android:id="@+id/progressBar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/black"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/statusImage"
@@ -73,6 +83,7 @@
         android:layout_marginTop="112dp"
         android:backgroundTint="@color/white"
         android:visibility="gone" />
+
     <TextView
         android:id="@+id/placeholderMessage"
         android:layout_width="wrap_content"
@@ -82,12 +93,11 @@
         android:textAlignment="center"
         android:textColor="?attr/colorOnSecondary"
         android:textSize="@dimen/tl_text_size"
-        android:textStyle="bold"
-        android:visibility="gone"/>
+        android:textStyle="bold" />
+</FrameLayout>
         <Button
             android:id="@+id/btnUpdate"
             style="@style/SearchRefreshButton"
             android:text="@string/btn_update" />
-
 
 </LinearLayout>
