--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,9 @@
     <dimen name="as_margin">20dp</dimen>
     <dimen name="as_margin_top">42dp</dimen>
     <dimen name="as_margin_top_big">61dp</dimen>
+    <dimen name="one_hundred">100dp</dimen>
+    <dimen name="one_hundred_fourteen">140dp</dimen>
+    <dimen name="one_hundred_sixteen">160dp</dimen>
     <dimen name="text_fourteen">14sp</dimen>
     <dimen name="as_text_size">16sp</dimen>
     <dimen name="tl_text_size">11sp</dimen>
